force-app/main/default/objects/Opportunity/fields/Acknowledgment_Age_Business_Days__c.field-meta.xml
<CustomField>
    <fullName>Acknowledgment_Age_Business_Days__c</fullName>
    <description>Business days (Mon-Fri, weekends excluded) elapsed from the gift date (Close Date) to today. Drives the 48-hour (2 business day) acknowledgment SLA report. Live formula, no staleness. JSI-87 / Jason Ott.</description>
    <formula>(5 * ( FLOOR( ( TODAY() - DATE(1900,1,8) ) / 7 ) ) + MIN(5, MOD( TODAY() - DATE(1900,1,8), 7 )))
-
(5 * ( FLOOR( ( CloseDate - DATE(1900,1,8) ) / 7 ) ) + MIN(5, MOD( CloseDate - DATE(1900,1,8), 7 )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Business days since the gift date. Used for the 48-hour (2 business day) acknowledgment SLA.</inlineHelpText>
    <label>Acknowledgment Age (Business Days)</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>