force-app/main/default/objects/Opportunity/fields/Acknowledgment_Channel__c.field-meta.xml
<CustomField>
    <fullName>Acknowledgment_Channel__c</fullName>
    <description>How this gift is acknowledged, resolved by the acknowledgment router from Acknowledgment_Rule__mdt: Email (custom flow-sent), Print (letter via the Visualforce print page), or None. JSI-87 / Jason Ott.</description>
    <inlineHelpText>How this gift is acknowledged: Email, Print, or None. Set automatically by the acknowledgment router.</inlineHelpText>
    <label>Acknowledgment Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Print</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>