force-app/main/default/objects/Opportunity/fields/Acknowledgment_Send_Mode__c.field-meta.xml
<CustomField>
    <fullName>Acknowledgment_Send_Mode__c</fullName>
    <description>Whether this acknowledgment sends automatically or requires reviewer approval first, resolved by the router from Acknowledgment_Rule__mdt. All printed letters are Approval-Gated. JSI-87 / Jason Ott.</description>
    <inlineHelpText>Auto = sends without review. Approval-Gated = a reviewer must approve before it goes out. Set by the router.</inlineHelpText>
    <label>Acknowledgment Send Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Auto</fullName>
            </value>
            <value>
                <fullName>Approval-Gated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>