force-app/main/default/objects/Opportunity/fields/Acknowledgment_Sent_By__c.field-meta.xml
<CustomField>
    <fullName>Acknowledgment_Sent_By__c</fullName>
    <description>The user who sent/printed this acknowledgment. Light audit trail alongside the native Acknowledgment Date. JSI-87 / Jason Ott.</description>
    <inlineHelpText>The user who sent or printed this acknowledgment.</inlineHelpText>
    <label>Acknowledgment Sent By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Acknowledgments Sent</relationshipLabel>
    <relationshipName>Acknowledgments_Sent</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <type>Lookup</type>
</CustomField>