force-app/main/default/objects/Opportunity/fields/Acknowledgment_Template__c.field-meta.xml
<CustomField>
    <fullName>Acknowledgment_Template__c</fullName>
    <description>The acknowledgment template chosen by the router (letter screen-flow API name or email template name) for this gift. Recorded for reporting and audit. JSI-87 / Jason Ott.</description>
    <inlineHelpText>The acknowledgment template selected for this gift (set by the router).</inlineHelpText>
    <label>Acknowledgment Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>