force-app/main/default/objects/Opportunity/fields/Amount_Due_To_Date__c.field-meta.xml
<CustomField>
    <fullName>Amount_Due_To_Date__c</fullName>
    <description>Expected-to-date amount still unpaid on a pledge: SUM of Payment Amount where Paid=false, Written Off=false, and Scheduled Date &lt;= today. Populated by DLRS (Realtime + nightly Full Calculate). Added for JSI-82. Author: Jason Ott.</description>
    <inlineHelpText>Amount that should have been received by today per the payment schedule but has not yet been paid.</inlineHelpText>
    <label>Amount Due To Date</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>