force-app/main/default/objects/Opportunity/fields/Approach__c.field-meta.xml
<CustomField>
    <fullName>Approach__c</fullName>
    <description>Fundraising approach/channel for this donation (e.g., Direct Mail). Added for JSI-80 NPSP Gift Entry. Author: Jason Ott.</description>
    <inlineHelpText>The approach or channel through which this gift was received (e.g., Direct Mail).</inlineHelpText>
    <label>Approach</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct Mail</fullName>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Major Gift</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>In Person</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>