force-app/main/default/objects/Opportunity/fields/Campaign_Name__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Name__c</fullName>
    <description>Name of the primary Campaign on this gift, exposed as a text formula so it can be merged into acknowledgment email templates (a classic template can merge CampaignId but not the campaign&apos;s name through the lookup). JSI-124 / Jason Ott.</description>
    <formula>Campaign.Name</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <inlineHelpText>The campaign this gift is attributed to. Used by acknowledgment templates.</inlineHelpText>
    <label>Campaign Name</label>
    <type>Text</type>
</CustomField>