force-app/main/default/objects/Opportunity/fields/DAF_Gift__c.field-meta.xml
<CustomField>
    <fullName>DAF_Gift__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DAF Gift</label>
    <type>Checkbox</type>
</CustomField>