force-app/main/default/objects/Opportunity/fields/Date_Stock_Received__c.field-meta.xml
<CustomField>
    <fullName>Date_Stock_Received__c</fullName>
    <description>Date the donated shares were received (may differ from the recorded gift/close date). JSI-84 / Jason Ott.</description>
    <inlineHelpText>Date the shares were received (may differ from the gift Close Date).</inlineHelpText>
    <label>Date Stock Received</label>
    <type>Date</type>
</CustomField>