force-app/main/default/objects/Opportunity/fields/Deductible_Amount__c.field-meta.xml
<CustomField>
    <fullName>Deductible_Amount__c</fullName>
    <description>Tax-deductible portion = Amount − Non-Deductible Amount (floored at 0). Auto-calculated formula. JSI-86 / Jason Ott.</description>
    <formula>MAX(Amount - BLANKVALUE(Non_Deductible_Amount__c, 0), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Auto-calculated: gift Amount minus the Non-Deductible Amount.</inlineHelpText>
    <label>Tax-Deductible Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>