force-app/main/default/objects/Opportunity/fields/Gala_Level__c.field-meta.xml
<CustomField>
    <fullName>Gala_Level__c</fullName>
    <description>The gala level this purchase bought (individual ticket, table, sponsorship...). Drives seats/tables + the deductible split. Gala Event Gifts / Jason Ott.</description>
    <label>Gala Level</label>
    <referenceTo>Gala_Level__c</referenceTo>
    <relationshipLabel>Gala Purchases</relationshipLabel>
    <relationshipName>Gala_Opportunities</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <type>Lookup</type>
</CustomField>