force-app/main/default/objects/Opportunity/fields/Last_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Payment_Date__c</fullName>
    <description>Date of the most recent PAID payment on this gift. Native roll-up (MAX of Payment Date where Paid = true) rather than a flow-stamped field: Payment is a master-detail child, so this stays real-time and delete-safe with no DML. Used by the installment notification emails, which cannot merge Payment fields directly because the Payment object has activities disabled and so cannot be an email template&apos;s whatId. JSI-125 / Jason Ott.</description>
    <inlineHelpText>Date of the most recent paid payment on this gift.</inlineHelpText>
    <label>Last Payment Date</label>
    <summarizedField>npe01__OppPayment__c.npe01__Payment_Date__c</summarizedField>
    <summaryFilterItems>
        <field>npe01__OppPayment__c.npe01__Paid__c</field>
        <operation>equals</operation>
        <value>true</value>
    </summaryFilterItems>
    <summaryForeignKey>npe01__OppPayment__c.npe01__Opportunity__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>