force-app/main/default/objects/Opportunity/fields/Number_of_Shares__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Shares__c</fullName>
    <description>Number of shares donated in a securities/stock gift (fractional allowed). JSI-84 / Jason Ott.</description>
    <inlineHelpText>Number of shares donated (fractional shares allowed).</inlineHelpText>
    <label>Number of Shares</label>
    <precision>16</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>