force-app/main/default/objects/Opportunity/fields/Original_Pledge_Amount__c.field-meta.xml
<CustomField>
    <fullName>Original_Pledge_Amount__c</fullName>
    <description>Original committed pledge amount, preserved for history. Under JSI-82 Option B, when a pledge becomes Partially Posted the Opportunity Amount is overwritten with the collected total; this field retains the original commitment. Added for JSI-82. Author: Jason Ott.</description>
    <inlineHelpText>The originally committed pledge amount (retained even if Amount is later reduced to the collected total).</inlineHelpText>
    <label>Original Pledge Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>