force-app/main/default/objects/Opportunity/fields/Pledge_Written_Off__c.field-meta.xml
<CustomField>
    <fullName>Pledge_Written_Off__c</fullName>
    <description>Uncollected pledge remainder written off when a pledge is Partially Posted (JSI-82 Option B). A custom field is used instead of NPSP native write-off, because reducing Amount to the collected total while also using native write-off would drive Remaining Balance negative. PENDING CLIENT CONFIRMATION (Option A/B/C). Added for JSI-82. Author: Jason Ott.</description>
    <inlineHelpText>Portion of the original pledge that was not collected and has been written off.</inlineHelpText>
    <label>Pledge Written Off</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>