force-app/main/default/objects/Opportunity/fields/Stock_Ticker_Symbol__c.field-meta.xml
<CustomField>
    <fullName>Stock_Ticker_Symbol__c</fullName>
    <description>Ticker symbol of the donated security (e.g., AAPL) for a securities/stock gift. JSI-84 / Jason Ott.</description>
    <inlineHelpText>Ticker symbol of the donated security (e.g., AAPL).</inlineHelpText>
    <label>Stock/Ticker Symbol</label>
    <length>10</length>
    <type>Text</type>
</CustomField>