force-app/main/default/objects/Opportunity/fields/Stock_Valuation_Method__c.field-meta.xml
<CustomField>
    <fullName>Stock_Valuation_Method__c</fullName>
    <description>How the securities gift's fair market value was determined. IRS Pub 561: publicly-traded stock is valued at the mean of the high/low quoted price on the gift date. JSI-84 / Jason Ott.</description>
    <inlineHelpText>How the gift value was determined. Publicly-traded stock: average of the high and low price on the gift date (IRS Pub 561).</inlineHelpText>
    <label>Valuation Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Average of High and Low (Publicly Traded)</fullName>
            </value>
            <value>
                <fullName>Closing Price</fullName>
            </value>
            <value>
                <fullName>Qualified Appraisal</fullName>
            </value>
            <value>
                <fullName>Donor-Declared</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>