force-app/main/default/objects/Opportunity/fields/Tribute_Contact_Needs_Review__c.field-meta.xml
<CustomField>
    <fullName>Tribute_Contact_Needs_Review__c</fullName>
    <description>Set by the JSI-89 tribute-matching automation when a honoree or notification recipient matched 2+ existing Contacts (ambiguous). The lookup was left blank for a person to resolve manually. Author: Jason Ott.</description>
    <inlineHelpText>Auto-checked when the tribute contact matcher found multiple possible Contacts. Review and set the Honoree/Notification Recipient lookup manually, then uncheck.</inlineHelpText>
    <label>Tribute Contact Needs Review</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>