force-app/main/default/objects/Opportunity/recordTypes/Event_Registration.recordType-meta.xml
<RecordType>
    <fullName>Event_Registration</fullName>
    <active>true</active>
    <businessProcess>Donation_Process</businessProcess>
    <description>Event tickets / gala registrations. The gift Amount is full revenue; the goods/services value goes in Non-Deductible Amount so the Tax-Deductible Amount is calculated. JSI-86 / Jason Ott.</description>
    <label>Event Registration</label>
</RecordType>