force-app/main/default/objects/Opportunity/recordTypes/Grant.recordType-meta.xml
<RecordType>
    <fullName>Grant</fullName>
    <active>true</active>
    <businessProcess>Grant_Process</businessProcess>
    <description>Grant award, typically installment-paid; treated like a pledge for payments. Excluded from auto-payment creation. JSI-82 / Jason Ott.</description>
    <label>Grant</label>
</RecordType>