force-app/main/default/objects/Opportunity/recordTypes/In_Kind_Gift.recordType-meta.xml
<RecordType>
    <fullName>In_Kind_Gift</fullName>
    <active>true</active>
    <businessProcess>Donation_Process</businessProcess>
    <description>Non-cash (in-kind) gift. No cash payment; excluded from auto-payment creation. Layout/stages to be refined in its own story. JSI-82 / Jason Ott.</description>
    <label>In-Kind Gift</label>
</RecordType>