force-app/main/default/objects/Opportunity/recordTypes/Major_Gift.recordType-meta.xml
<RecordType>
    <fullName>Major_Gift</fullName>
    <active>true</active>
    <businessProcess>Donation_Process</businessProcess>
    <description>Major gift (one-time). If pledged, use the Pledge record type instead. JSI-82 / Jason Ott.</description>
    <label>Major Gift</label>
</RecordType>