force-app/main/default/objects/Opportunity/recordTypes/Matching_Gift.recordType-meta.xml
<RecordType>
    <fullName>Matching_Gift</fullName>
    <active>true</active>
    <businessProcess>Donation_Process</businessProcess>
    <description>Employer/foundation matching gift. JSI-82 / Jason Ott.</description>
    <label>Matching Gift</label>
</RecordType>