force-app/main/default/objects/Opportunity/recordTypes/NPSP_Default.recordType-meta.xml
<RecordType>
    <fullName>NPSP_Default</fullName>
    <active>true</active>
    <businessProcess>Donation_Process</businessProcess>
    <label>Donation</label>
</RecordType>