force-app/main/default/objects/Opportunity/recordTypes/Pledge.recordType-meta.xml
<RecordType>
    <fullName>Pledge</fullName>
    <active>true</active>
    <businessProcess>Pledge_Process</businessProcess>
    <description>Multi-payment pledge commitment (accrual). Payments scheduled manually; excluded from auto-payment creation. JSI-82 / Jason Ott.</description>
    <label>Pledge</label>
</RecordType>