force-app/main/default/objects/Opportunity/recordTypes/Securities_Gift.recordType-meta.xml
<RecordType>
    <fullName>Securities_Gift</fullName>
    <active>true</active>
    <businessProcess>Donation_Process</businessProcess>
    <description>Gift of stock / securities. Aligns with the JSI-80 Stock/Securities/Crypto payment method. JSI-82 / Jason Ott.</description>
    <label>Securities Gift</label>
</RecordType>