force-app/main/default/objects/Opportunity/validationRules/Non_Deductible_Not_Over_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>Non_Deductible_Not_Over_Amount</fullName>
    <active>true</active>
    <description>The non-deductible portion of a gift can't exceed the gift Amount. JSI-86.</description>
    <errorConditionFormula>AND(
  NOT(ISBLANK(Non_Deductible_Amount__c)),
  NOT(ISBLANK(Amount)),
  Non_Deductible_Amount__c &gt; Amount
)</errorConditionFormula>
    <errorDisplayField>Non_Deductible_Amount__c</errorDisplayField>
    <errorMessage>The Non-Deductible Amount can't be more than the gift Amount.</errorMessage>
</ValidationRule>