force-app/main/default/objects/Opportunity/validationRules/Partially_Post_Only_Pledges_With_Payment.validationRule-meta.xml
<ValidationRule>
    <fullName>Partially_Post_Only_Pledges_With_Payment</fullName>
    <active>true</active>
    <description>You can only partially post pledges with payments.</description>
    <errorConditionFormula>TEXT(StageName) = &apos;Partially Posted&apos; &amp;&amp;  npe01__Payments_Made__c = 0</errorConditionFormula>
    <errorDisplayField>StageName</errorDisplayField>
    <errorMessage>You cannot partially post an opportunity that has no payments. Use Written Off instead or add payment information</errorMessage>
</ValidationRule>