force-app/main/default/objects/Opportunity/validationRules/Write_Off_Only_No_Payment_Pledges.validationRule-meta.xml
<ValidationRule>
    <fullName>Write_Off_Only_No_Payment_Pledges</fullName>
    <active>true</active>
    <description>You can only write off pledges where no payments have been made.</description>
    <errorConditionFormula>TEXT(StageName) = &apos;Written Off&apos; &amp;&amp;  npe01__Payments_Made__c &gt; 0</errorConditionFormula>
    <errorDisplayField>StageName</errorDisplayField>
    <errorMessage>You cannot write-off an opportunity if payments have already been made. Use Partially Posted or remove the payments.</errorMessage>
</ValidationRule>